--- a/composer.json
+++ b/composer.json
@@ -18,9 +18,12 @@
     },
     "require": {
         "illuminate/database": "~7.0 || ~8.0",
-        "illuminate/events": "~7.0 || ~8.0"
+        "illuminate/events": "~7.0 || ~8.0",
+        "lifhold-sample/users-contracts": "dev-master"
     },
     "require-dev": {
         "phpunit/phpunit": "^9.0"
-    }
+    },
+    "prefer-stable": true,
+    "minimum-stability": "dev"
 }
